<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/azur"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/employeeIcon"
            android:layout_width="114dp"
            android:layout_height="146dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="4dp"
            android:background="@color/pink"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_baseline_person" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emp_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/eNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emp_num"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/eAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emp_address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/eSal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emp_sal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/eBon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emp_bon"
                android:textColor="@color/total"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/total_E"
                android:textColor="@color/total"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
